2012-12-01  Julien Bect  <julien.bect@supelec.fr>

	Fixed a typo in the documentation of stk_is_lhs().

	* misc/test/stk_is_lhs.m: modified

	Fixed a bug in stk_runexamples().

	* misc/test/stk_runexamples.m: modified

2012-11-29  Julien Bect  <julien.bect@supelec.fr>

	Modified stk_predict() to return the posterior covariance matrix
	as a fourth output argument.

	* core/stk_predict.m: modified

2012-11-26  Julien Bect  <julien.bect@supelec.fr>

	Modified all stk_sampling* functions to use stk_rescale()
	and stk_assert_box().

	* sampling/stk_sampling_olhs.m: modified
	* sampling/stk_sampling_randunif.m: modified
	* sampling/stk_sampling_regulargrid.m: modified
	* sampling/stk_sampling_randomlhs.m: modified
	* sampling/stk_sampling_maximinlhs.m: modified

	Minor improvements in stk_is_lhs().

	* misc/test/stk_is_lhs.m: modified

	Added a new function to rescale data from one box to another.

	* utils/stk_rescale.m: new function
	* utils/stk_normalize.m: (slightly) modified

	Added a new function to check "box" arguments.

	* misc/error/stk_assert_box.m: new function

2012-11-25  Julien Bect  <julien.bect@supelec.fr>

	Added a new function to generate OLHSs, following Ye (1998).

	* sampling/stk_sampling_olhs.m: new function

2012-11-21  Julien Bect  <julien.bect@supelec.fr>

	Added default values for some input arguments of stk_is_lhs(),
	and stricter dimension checking.

	* misc/test/stk_is_lhs.m: modified

2012-11-14  Julien Bect  <julien.bect@supelec.fr>

	Changed the upper bound on nu in stk_param_estim().

	* paramestim/stk_param_estim.m: modified

	Fixed a bug in stk_param_init().

	* paramestim/stk_param_init.m: modified

	Added a new MEX-file to compute a discretized fill distance.

	* misc/dist/stk_filldist.c: new MEX-file (source)
	* misc/dist/stk_filldist.m: new MEX-file (doc + tests)
	* misc/dist/stk_mindist.m: modified
	* misc/config/stk_compile_all.m: modified

	Added a new function to help initialize stk_param_estim().
